--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
 body{
     padding: 0;
     margin:0;
-    
-} 
+}
+.menu{
+    padding-right: 20px;
+    color:#50658e !important;
+}
+.button-menu{
+    border: 5px solid #007bff;
+    border-radius: 34%;
+    padding: 5px 9px 5px 9px;
+}
+.font{
+    font-family: 'Roboto Condensed', sans-serif;
+}
