Menu com responsividade

--- a/css/style.css
+++ b/css/style.css
@@ -1,431 +1,236 @@
 body{
-  padding: 0;
-  margin:0;
+    padding: 0%;
+    margin: 0%;
+    width: 100vw;
+    height: 100vh;
 }
-
-.fixed-top{
-  padding: 0%;
-  position: fixed;
-  padding-top: 20px;
-  background-image: url('http://demo.themenio.com/kovid19/assets/images/shape-a.png');
-  height: 75px;
-  background-color: #f6f6f6;
+.div-principal{
+    background-image: url(http://demo.themenio.com/kovid19/assets/images/shape-a.png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 100%;
 }
-
-.navbar {
-  padding: 0;
+header{
+    height: 735px;
 }
-
-.navbar ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-  align-items: center;
+.sobreposição{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
-
-.navbar li {
-  position: relative;
+.navbar-logo{
+    display: flex;
 }
-
-.navbar a, .navbar a:focus {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 0 10px 30px;
-  font-family: "Nunito", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  color: #50658e;
-  white-space: nowrap;
-  transition: 0.3s;
+.navbar{
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 30px 0;
 }
-
-.navbar a i, .navbar a:focus i {
-  font-size: 12px;
-  line-height: 0;
-  margin-left: 5px;
+.div-navbar{
+    display: flex;
+    align-items: center;
+    margin: 0 -15px;
 }
-
-.navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #4154f1;
+.navbar-menu{
+    padding-left: 22px;
+    font-size: 16px;
 }
-
-.navbar .getstarted, .navbar .getstarted:focus {
-  background: #2a81ea;
-  padding: 8px 20px;
-  margin-left: 30px;
-  border-radius: 30px;
-  color: #fff;
+.navbar-menu ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
 }
-
-.navbar .getstarted:hover, .navbar .getstarted:focus:hover {
-  color: #fff;
-  background: #2a81ea;
+.navbar-menu li {
+    padding-left: 18px;
 }
-
-.navbar .dropdown ul {
-  display: block;
-  position: absolute;
-  left: 14px;
-  top: calc(100% + 30px);
-  margin: 0;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-  border-radius: 4px;
+.navbar-menu a {
+    color: #50658e;
+    text-decoration: none;
+    font-weight: bold;
 }
-
-.navbar .dropdown ul li {
-  min-width: 200px;
+.navbar-menu a:hover{
+    color: #2a81ea !important ;
 }
-
-.navbar .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 15px;
-  text-transform: none;
-  font-weight: 600;
+.navbar-menu span {
+    padding-right: 8px;
 }
-
-.navbar .dropdown ul a i {
-  font-size: 12px;
+.navbar-menu .getstarted {
+    color: white !important;
+    background-color: #2a81ea;
+    font-weight: bold;
+    border-radius: 2rem;
+    padding: 10px 15px 10px 15px;
+    text-decoration: none;
 }
-
-.navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #4154f1;
+.navbar-menu .getstarted:hover{
+    background-color: #1468cd;
+    color: white !important;
 }
-
-.navbar .dropdown:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.navbar .dropdown .dropdown ul {
-  top: 0;
-  left: calc(100% - 30px);
-  visibility: hidden;
-}
-
-.navbar .dropdown .dropdown:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-  visibility: visible;
+.icone-abrir{
+    padding-left: 545px;
+    font-size: 20px;
+    padding-top: 12px;
 }
 main{
-  width: 100%;
-  height: 414px;
+    width: 100%;
+    height: 414px;
 }
 .bg-menu-responsivo {
-  background-color: rgba(27,71,161,0.8);
-  opacity: 0.8;
-  display: none;
+    background-color: rgba(27,71,161,0.8);
+    opacity: 1;
+    z-index: 9999;
+    height: 100vh;
+    margin-top: 412px;
 }
-
 .navbar-mobile{
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  width: 260px;
-  background: white;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 260px;
+    background: white;
 
-}
-.navbar-mobile a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #4154f1 !important;
 }
 .navbar-mobile ul{
   margin: 0;
   padding: 0;
   list-style: none;
 }
-.nav-mobile .mobile-icone{
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
-.navbar-mobile .dropdown ul{
-  display: block;
-  position: absolute;
-  left: 14px;
-  top: calc(100% + 30px);
-  margin: 0;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-  border-radius: 4px;
-  
-}
-.navbar-mobile .dropdown ul li {
-  min-width: 200px;
-}
-
-.navbar-mobile .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 15px;
-  text-transform: none;
-  font-weight: 600;
-}
-
-.navbar-mobile .dropdown ul a i {
-  font-size: 12px;
-}
-
-.navbar-mobile .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #4154f1;
-}
-
-.navbar-mobile .dropdown:hover > ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.navbar-mobile .dropdown .dropdown ul {
-  top: 0;
-  left: calc(100% - 30px);
-  visibility: hidden;
-}
-
-.navbar-mobile .dropdown .dropdown:hover > ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-  visibility: visible;
-}
-
-.navbar-mobile .getstarted, .navbar .getstarted:focus {
-    background: #2a81ea;
-    padding: 8px 20px;
-    margin-left: 24px;
-    border-radius: 30px;
-    color: #fff !important;
-    font-weight: bold;
-}
-
-.navbar-mobile .getstarted:hover, .navbar .getstarted:focus:hover {
-  color: #fff;
-  background: #2a81ea;
-}
-.navbar-mobile a, .navbar a:focus {
-  font-family: "Nunito", sans-serif;
-  font-size: 13px;
-  font-weight: 550;
-  color: #50658e !important;
-}
 .icone-fechar-menu{
-  right: 45px;
-  padding: 10px 14px 8px 14px;
-  margin-top: 20px;
-  border-radius: 100%;
-  background: rgba(255,255,255,0.8);
-  color: #50658e !important;
+    padding-left: 696px;
+    font-size: 22px;
 }
-.primeira-section{
-  background-image: url('http://demo.themenio.com/kovid19/assets/images/shape-a.png');
-  height: 600px;
-  background-color: #f6f6f6;
+.navbar-mobile .getstarted {
+    color: white !important;
+    background-color: #2a81ea;
+    font-weight: bold;
+    border-radius: 2rem;
+    padding: 10px 15px 10px 15px;
+    text-decoration: none;
+    margin-left: 30px;
 }
-
-.font-titulo{
-  font-family: 'Oswald', sans-serif;
+.navbar-mobile .getstarted:hover{
+    background-color: #1468cd;
+    color: white !important;
 }
-
-.text-corona-primeira-section{
-  color: #50658e;
-  font-size: 5.25rem;
-}
-.text-covid-primeira-section{
-  color: #f86168;
-  font-size: 1.75rem;
-}
-.text-virus-primeira-section{
-  color: #50658e;
-  font-size: 3rem;
-}
-
-.span-covid-primeira-section{
-  line-height: 2;
-}
-.img-primeira-section{
-  width: 600px;
-  height: 540px;
-  margin-top: 30px;
-}
-.text-legenda-primeira-section{
-  font-family: 'Roboto', sans-serif;
-  color: #3d4b69 !important;
-  margin-bottom: 50px;
-}
-.mt-100{
-  margin-top: 100px;
-}
-.primeira-section ul{
-  list-style: none;
-}
-.primeira-section li{
-  display: inline;
-}
-.primeira-section .getstarted{
-  background: #2a81ea;
-  padding: 15px 30px;
-  margin-left: -45px;
-  border-radius: 30px;
-  color: #fff;
-  font-weight: bold;
-}
-.primeira-section .getstarted-branco{
-  padding: 15px 20px;
-  margin-left: 20px;
-  border-radius: 30px;
-  color: #2a81ea !important;
-  font-weight: bold;
-}
-@media (max-width: 320px) {
-
-#navbar{
-  display: none;
-}
-.pb-20{
-  padding-bottom: 20px;
-}
-.fixed-top{
-  padding: 0%;
-  padding-top: 20px;
-  padding-left: 20px;
-}
-
-.mobile-icone{
-  padding-top: 5px;
-  font-size: 21px;
-  color: #50658e;
-  padding-left: 20px;
-}
-
-}
-
-@media (max-width: 375px) and (min-width: 321px){
-
-#navbar{
-  display: none;
-}
-.fixed-top{
-  
-  position: fixed unset;  
-}
-.mobile-icone{
-  padding-top: 7px;
-  padding-left: 30px;
-  font-size: 20px;
-  color: #50658e;;
-}
-
-.pb-20{
-  padding-bottom: 20px;
-}
-
-}
-
-@media (max-width: 576px) and (min-width:  376px) {
-
-#navbar{
-  display: none;
-}
-
-.fixed-top{
-  padding: 0%;
-  position: fixed unset;
-  padding-top: 20px;
-  background-image: url('http://demo.themenio.com/kovid19/assets/images/shape-a.png');
-  height: 75px;
-  background-color: #f6f6f6;
-  padding-left: 20px;
-}
-
-.mobile-icone{
-  padding-top: 8px;
-  padding-left: 40px;
-  font-size: 20px;
-  color: #50658e;;
-}
-
-.pb-20{
-  padding-bottom: 20px;
-}
-}
-
-@media (max-width: 768px) and (min-width: 577px){
-#navbar{
-  display: none;
-}
-.fixed-top{
-  padding: 0%;
-  position: fixed unset;
-  padding-top: 20px;
-  background-image: url('http://demo.themenio.com/kovid19/assets/images/shape-a.png');
-  height: 75px;
-  background-color: #f6f6f6;
-  padding-left: 20px;
-}
-.mobile-icone{
-  padding-left: 110px;
-  padding-top: 5px;
-  font-size: 20px;
-  color: #50658e;;
-}
-.pb-20{
-  padding-bottom: 20px;
-}
-}
-
-@media (max-width: 992px) and (min-width: 769px) {
-
-.mobile-icone{
-  display: none;
-}
-.navbar-mobile{
-  display: none;
+.pb-22{
+    padding-bottom: 22px;
 }
 #bg_menu_mobile{
-  display: none;
+    display: none;
 }
+.tamanho{
+    padding-top: 40px;
 }
-
+@media (max-width: 320px) {
+    .navbar-menu{
+        display: none;
+    }
+    header{
+        height: 990px;
+    }
+    .navbar-logo{
+        padding-left: 20px;
+    }
+    .icone-abrir{
+        padding-left: 120px;
+        padding-top: 2px;
+    }
+    .icone-fechar-menu{
+        padding-top: 28px;
+        font-size: 29px;
+        color: white;
+        padding-left: 269px;
+    }
+}
+  
+  
+@media (max-width: 375px) and (min-width: 321px){
+    .navbar-menu{
+        display: none;
+    }
+    header{
+      height: 942px;
+    }
+    .icone-abrir{
+        padding-left: 170px;
+    }
+    .navbar-logo{
+        padding-left: 20px;
+    }
+    .icone-fechar-menu{
+        padding-top: 32px;
+        font-size: 29px;
+        color: white;
+        padding-left: 320px;
+    }
+}
+  
+@media (max-width: 576px) and (min-width:  376px) {
+    .navbar-menu{
+        display: none;
+    }
+    header{
+      height: 950px;
+    }
+    .icone-abrir{
+        padding-left: 220px;
+        padding-top: 5px;
+    }
+    .navbar-logo{
+        padding-left: 20px;
+    }
+    .icone-fechar-menu{
+        padding-top: 32px;
+        font-size: 29px;
+        color: white;
+        padding-left: 374px;
+    }
+}
+  
+@media (max-width: 768px) and (min-width: 577px){
+    .navbar-menu{
+      display: none;
+    }
+    header{
+      height: 975px;
+    }
+    .icone-fechar-menu{
+        padding-top: 35px;
+    font-size: 35px;
+    color: white;
+    }
+}
+  
 @media (max-width: 1200px) and (min-width: 993px) {
-
-  .navbar a, .navbar a:focus {
-    font-size: 13px;
-  }
-
-  .mobile-icone{
-    display: none;
-  }
-  .navbar-mobile{
-    display: none;
-  }
-  #bg_menu_mobile{
-    display: none;
-  }
+    .navbar-menu{
+        padding-left: 30px;
+        font-size: 12px;
+    }
+    .navbar-menu li {
+        padding-left: 10px;
+    }
+    header{
+        height: 630px;
+    }
+    .icone-abrir{
+        display: none;
+    }
 }
-
+  
 @media (min-width: 1201px) {
-
-  .mobile-icone{
-    display: none !important;
-  }
-  .navbar-mobile{
-    display: none;
-  }
-  #bg_menu_mobile{
-    display: none;
-  }
+    header{
+        height: 1285px;
+    }
+   .icone-abrir{
+       display: none;
+   }
+   .navbar-menu li{
+        padding-left: 14px;
+   }
 }
