--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ main{
     margin-left: 65px;
     margin-top: 105px;
     margin-bottom: 80px;
-    width: 350px;
+    width: 405px;
 }
 .segunda-div h4{
     color: #465675 !important;
@@ -277,6 +277,53 @@ main{
 #segunda-div li{
     padding: 23px 15px 15px 26px;
 
+}
+/*terceira section*/
+.titulo-um-terceira-section{
+    color: #2a81ea;
+    padding-top: 150px;
+    letter-spacing: 1px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.125rem;
+}
+.titulo-dois-terceira-section{
+    font-family: 'Oswald', sans-serif;
+    color: #465675;
+    font-size: 2.5rem;
+}
+.texto-um-terceira-section{
+    font-family: 'Roboto Slab', serif;
+    color: #3d4b69;
+    font-size:1.2em;
+    margin-top: 25px;
+}
+.div-um-terceira-section{
+    text-align: center;
+}
+.border-card{
+    border-bottom: 6px solid #9cc2f7;
+}
+.card-cor{
+    color: #2a81ea;
+    font-weight: 500;
+    letter-spacing: -0.025em;
+    font-family: 'Roboto', sans-serif;
+}
+.card-body p {
+    color: #3d4b69;
+    line-height: 1.5;
+    font-family: 'Roboto Slab', serif;
+}
+.margin-left-negativa{
+    margin-left: -100px;
+}
+.button-terceira-section{
+    padding: 11px 28px 11px 28px;
+    border-radius: 50px;
+    margin-bottom: 90px;
+}
+.tamanho-lateral{
+    width: 22rem;
 }
 @media (max-width: 320px) {
     .navbar-menu{
@@ -345,10 +392,30 @@ main{
     #dropdown {
         margin-top: -19px
     }
-    .card {
+    .card-segunda-section {
         margin-left: -9px;
         margin-top: 19px;
         width: 305px;
+    }
+    .card{
+        margin-left: 26%;
+        margin-top: 10px;
+       
+    }
+    .icone-segunda-section{
+        font-size: 0.9rem;
+        text-align: center;
+    }
+    .secunda-section {
+        width: 100vw;
+        margin-bottom: 635px;
+    }
+    .tamanho-lateral{
+        width: 17rem;
+    }
+    .button-terceira-section {
+        padding: 11px 10px 11px 10px;
+        font-size: 0.9rem;
     }
 }
   
@@ -414,11 +481,28 @@ main{
     #dropdown {
         margin-top: -19px
     } 
-    .card {
+    .card-segunda-section {
         margin-left: 0px;
         margin-top: 25px;
         width: 345px;
     }
+    .card{
+        margin-left: 19%;
+        margin-top: 10px;
+       
+    }
+    .icone-segunda-section{
+        font-size: 0.9rem;
+        text-align: center;
+    }
+    .secunda-section {
+        width: 100vw;
+        margin-bottom: 585px;
+    }
+    .tamanho-lateral{
+        width: 22rem;
+    }
+        
 }
   
 @media (max-width: 576px) and (min-width:  376px) {
@@ -486,7 +570,7 @@ main{
     #dropdown {
         margin-top: -19px
     }
-    .card{
+    .card-segunda-section{
         margin-left: 10px;
         margin-top: 54px;
         width: 363px;
@@ -500,6 +584,22 @@ main{
     }
     .texto-tres-segunda-section{
         font-size: 1.125rem;
+    }
+    .card{
+        margin-left: 22%;
+        margin-top: 45px;
+       
+    }
+    .icone-segunda-section{
+        font-size: 0.9rem;
+        text-align: center;
+    }
+    .secunda-section {
+        width: 100vw;
+        margin-bottom: 585px;
+    }
+    .tamanho-lateral{
+        width: 22rem;
     }
     
 }
@@ -554,14 +654,28 @@ main{
     .titulo-um-segunda-section {
         margin-top: 16%;
     }
-    .card{
-        margin-left: -2px;
-        margin-top: 45px;
+    .card-segunda-section{
+        margin-left: 24px;
         width: 650px;
+    }
+    .card{
+        margin-left: 36%;
+        margin-top: 35px;
+       
     }
     .icone-segunda-section{
         font-size: 0.9rem;
         text-align: center;
+    }
+    .secunda-section {
+        width: 100vw;
+        margin-bottom: 395px;
+    }
+    .tamanho-lateral{
+        font-size: 22rem;
+    }
+    .card-body p {
+        font-size: 1rem;
     }
 }
   
@@ -612,9 +726,18 @@ main{
     #dropdown {
         margin-left: -20px;
     }
-    .card{
-        margin-left: -30px;
+    .card {
+        margin-left: -39px;
         margin-top: 85px;
+    }
+    .tamanho-lateral{
+        width: 18rem !important;
+    }
+    .margin-left-negativa {
+        margin-left: 22px;
+    }
+    .card-body p {
+        font-size: 0.9rem;
     }
 }
 @media (max-width: 1440px) and (min-width: 1200px) {
