--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ main{
     font-family: 'Roboto Slab', serif;
 }
 .margin-left-negativa{
-    margin-left: -100px;
+    margin-left: -50px;
 }
 .button-terceira-section{
     padding: 11px 28px 11px 28px;
@@ -324,6 +324,63 @@ main{
 }
 .tamanho-lateral{
     width: 22rem;
+}
+/*quarta-section*/
+.titulo-um-quarta-section{
+    color: #2a81ea;
+    padding-top: 150px;
+    letter-spacing: 1px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.125rem;
+}
+.titulo-dois-quarta-section {
+    font-family: 'Oswald', sans-serif;
+    color: #465675;
+    font-size: 2.5rem;
+}
+.texto-um-quarta-section {
+    font-family: 'Roboto Slab', serif;
+    color: #3d4b69;
+    font-size: 1.5em;
+    margin-top: 25px;
+}
+.sintomas{
+    border: unset !important;
+    position: relative;
+    box-shadow: 0px 5px 40px 15px rgb(80 101 142 / 8%);
+    margin-top: 120px;
+    margin-bottom: 90px;
+    width: auto;
+    height: 218px;
+}
+.imagem-sintomas {
+    border-radius: 100%;
+    position: absolute;
+    height: 80px;
+    right: 30px;
+    top: -40px;
+}
+.title {
+    margin-bottom: 0.6875rem;
+    color: #2a81ea;
+    font-weight: 500;
+    letter-spacing: -0.01em;
+}
+.icone{
+    color: #7fb3f2;
+    font-size: 2.5rem;
+    width: 4rem;
+    margin-top: 13px;
+}
+.texto-azul{
+    color: #2a81ea;
+    font-style: normal;
+}
+.texto-terceira-section{
+    font-style: italic;
+    color: #3d4b69;
+    font-size: 1rem;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 @media (max-width: 320px) {
     .navbar-menu{
@@ -340,7 +397,7 @@ main{
         padding-top: 2px;
     }
     .icone-fechar-menu{
-        padding-top: 28px;
+        padding-top: 35px;
         font-size: 29px;
         color: white;
         padding-left: 269px;
@@ -371,7 +428,7 @@ main{
         font-size: 12px;
     }
     .text-mobile-recovered-primeira-section{
-        margin-top: -43px;
+        margin-top: -39px;
     }
     .numero-primeira-section {
         line-height: 1;
@@ -395,12 +452,14 @@ main{
     .card-segunda-section {
         margin-left: -9px;
         margin-top: 19px;
-        width: 305px;
     }
     .card{
-        margin-left: 26%;
+        margin-left: 14%;
         margin-top: 10px;
        
+    }
+    .border{
+        width: unset !important;
     }
     .icone-segunda-section{
         font-size: 0.9rem;
@@ -408,7 +467,7 @@ main{
     }
     .secunda-section {
         width: 100vw;
-        margin-bottom: 635px;
+        margin-bottom: 790px;
     }
     .tamanho-lateral{
         width: 17rem;
@@ -417,6 +476,9 @@ main{
         padding: 11px 10px 11px 10px;
         font-size: 0.9rem;
     }
+    .responsivo{
+        margin-top: 67px;
+    }  
 }
   
   
@@ -462,7 +524,7 @@ main{
         font-size: 12px;
     }
     .text-mobile-recovered-primeira-section{
-        margin-top: -52px;
+        margin-top: -47px;
     }
     .numero-primeira-section {
         line-height: 1;
@@ -487,7 +549,7 @@ main{
         width: 345px;
     }
     .card{
-        margin-left: 19%;
+        margin-left: 15%;
         margin-top: 10px;
        
     }
@@ -500,9 +562,11 @@ main{
         margin-bottom: 585px;
     }
     .tamanho-lateral{
-        width: 22rem;
+        width: 19rem;
     }
-        
+    .responsivo{
+         margin-top: 67px;
+    }  
 }
   
 @media (max-width: 576px) and (min-width:  376px) {
@@ -586,7 +650,7 @@ main{
         font-size: 1.125rem;
     }
     .card{
-        margin-left: 22%;
+        margin-left: 14%;
         margin-top: 45px;
        
     }
@@ -596,12 +660,14 @@ main{
     }
     .secunda-section {
         width: 100vw;
-        margin-bottom: 585px;
+        margin-bottom: 715px;
     }
     .tamanho-lateral{
         width: 22rem;
     }
-    
+    .responsivo{
+        margin-top: 67px;
+    }
 }
   
 @media (max-width: 768px) and (min-width: 577px){
@@ -657,9 +723,10 @@ main{
     .card-segunda-section{
         margin-left: 24px;
         width: 650px;
+    
     }
     .card{
-        margin-left: 36%;
+        margin-left: 30%;
         margin-top: 35px;
        
     }
@@ -676,6 +743,9 @@ main{
     }
     .card-body p {
         font-size: 1rem;
+    }
+    .responsivo{
+        margin-top: 67px;
     }
 }
   
@@ -739,6 +809,9 @@ main{
     .card-body p {
         font-size: 0.9rem;
     }
+    .responsivo{
+        margin-top: 67px;
+    }
 }
 @media (max-width: 1440px) and (min-width: 1200px) {
     header{
@@ -756,6 +829,13 @@ main{
     .img-primeira-section {
         margin-top: 164px;
     }
+    .responsivo{
+        margin-top: -14px;
+    }
+    .card{
+        margin-left: unset;
+    }
+
 }
 @media (max-width: 2560px) and (min-width: 1441px) {
     header{
@@ -771,13 +851,20 @@ main{
     order: unset;
     }
     .img-primeira-section {
-        margin-top: 288px;
+        margin-top: 405px;
     }
     .primeira-section {
         margin-top: 401px;
+        
     }
     .subtilo-primeira-section{
         font-size: 19.5px;
         
+    }
+    .titulo-um-segunda-section {
+        margin-top: 10%;
+    }
+    .responsivo{
+        margin-top: 67px;
     }
 }
